<resources>
    <string name="app_name">Currency Notes Checker</string>
    <string name="notesOf100">Notes of 100:</string>
    <string name="decimal_to_binary_converter">Enter Amount to be Withdrawn</string>
    <string name="enter_a_decimal_value">Enter Amount to be Withdrawn</string>
    <string name="todo">TODO</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
    <string name="enter_a_decimal_number">Enter Amount to be Withdrawn</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="notes_of_50">Notes of 50:</string>
    <string name="notes_of_10">Notes of 10:</string>
    <string name="notes_of_1">Notes of 1:</string>
    <string name="total_notes">Total Notes:</string>
</resources>